<resources>
    <string name="app_name">Jjenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tech-Alchimiste</string>
    <string name="nav_header_subtitle">techalchimiste@google.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="titre_nagation_item_vendre">Vendre</string>
    <string name="menu_articles">Articles</string>
    <string name="capture">capture</string>

    <string name="google_client_id">715568847329-nurs8o68n6quqcdsssk7vgillji0fk3k.apps.googleusercontent.com</string>
    <string name="imagekit_io_public_key">public_hZTJIDqZ+LIgQhi0er6ag1HWRrY=</string>
    <string name="photos_details_article">photos de l\'article</string>
    <string name="nom_details_article">Nom</string>
    <string name="ti_nom_details_article">nom</string>
    <string name="ti_description_details_article">Description</string>
    <string name="ti_categorie_details_article">Categorie</string>
    <string name="ti_prix_details_article">Prix</string>
    <string name="btn_poster_details_article">Poster</string>
    <string name="menu_mes_articles">Mes articles</string>
    <string name="connexion">Connexion</string>
    <string name="commentaires_connection">Connectez-vous avec votre compte google en cliquant sur le bouton de connection</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="article_en_ventes">Articles en vente</string>

    <string name="tv_description">Description</string>
    <string name="tv_prix">Prix</string>
    <string name="tv_title_contact">Contact</string>
    <string name="message">message</string>
    <string name="appel">appel</string>

    <string name="connection_problem_message">Problème de connexion</string>
    <string name="retry_message">REESSAYER</string>
    <string name="click_to_retry_message">APPUYER POUR REESSAYER</string>
    <string name="article_posted_message">Votre article a été posté</string>
    <string name="tv_categorie">Categorie</string>
    <string name="numero_de_telephone">Numero de telephone</string>
    <string name="entrer_numero_de_telephone">Entrer votre numero de telephone</string>
    <string name="envoyer">Envoyer</string>
    <string name="title_validation_code">Un code de verification a ete envoye a votre numero sinon l\'operation peu prendre jusqu\'a 5 minutes</string>
    <string name="hint_validation_code">code a 6 chiffres</string>
    <string name="airtel_money">Airtel money</string>
    <string name="m_pesa">M-pesa</string>
    <string name="orange_money">Orange money</string>
    <string name="payer">Payer</string>
    <string name="poster">Poster</string>
    <string name="version_payante">Version payante</string>
    <string name="voir_les_tarifs">Voir les tarifs</string>
    <string name="numero_de_telephone_non_valide">Numero de telephone non valide</string>
    <string-array name="categories_array">
        <item>Autres</item>
        <item>Pc</item>
        <item>Phone</item>
        <item>Habillement</item>
        <item>Accessoires de mode</item>
        <item>Accessoires phone</item>
    </string-array>

</resources>