<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="article"
            type="com.example.djenda.reseau.Article" />

        <variable
            name="viewModel"
            type="com.example.djenda.ui.articledetails.ArticleDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/container_article_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            fresco:placeholderImage="@drawable/ic_launcher_background">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/article_image"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:articleImage="@{article}" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_description"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_article_image" />

        <TextView
            android:id="@+id/article_categorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_small"
            android:text="@{article.categorie}"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_description"
            tools:text="@string/tv_categorie" />

        <TextView
            android:id="@+id/article_prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:background="@drawable/rounded_corner"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@android:color/white"
            app:articlePrix="@{article}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_description"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/article_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_small"
            android:text="@{article.description}"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/article_categorie"
            tools:text="@string/tv_description" />

        <TextView
            android:id="@+id/title_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_contact"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/article_description" />

        <Button
            android:id="@+id/btn_message_vendeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{ () -> viewModel.onSendMessage() }"
            android:text="@string/message"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_appel_vendeur"
            app:layout_constraintTop_toBottomOf="@id/title_contact" />

        <Button
            android:id="@+id/btn_appel_vendeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{ () -> viewModel.onCall() }"
            android:text="@string/appel"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_message_vendeur"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_contact" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>