<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.jjenda.ui.phonenumber.PhoneNumberViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:hint="@string/entrer_numero_de_telephone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:text="@={viewModel.phoneNumber}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/envoyer"
            android:onClick="@{ () -> viewModel.sendClicked() }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/il_number" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_number_invalide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryColor"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/numero_de_telephone_non_valide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_submit"/>

        <include
            android:id="@+id/progress_bar"
            layout="@layout/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>